# golf-course-geopandas

./: .gitignore  build_all.sh  init.command  init.sh  main.py  package.json  plot_courses.py  pyproject.toml  readme.md  requirements.txt
colors/: colors.xml
input_data/: golf_course_hole_gps_items.json
src/: color_manager.py  hole_item.py  plot_courses.py  utils.py
src/main/: main.js
src/python/: build_python.sh  color_manager.py  hole_item.py  plot_courses.py  plot_courses.spec  utils.py
src/python/hole_skin_changer/: color_manager.py  hole_item.py  plot_courses.py
src/renderer/: index.html  styles.css
src/renderer/js/: renderer.js
src/renderer/styles/: index.css
