[tool.poetry]
name = "Hole Skin Changer"
version = "1.0.0"
description = "A desktop application for changing the skin"
authors = [""]
packages = [
    { include = "hole_skin_changer", from = "src/python" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
geopandas = "1.0.1"
matplotlib = "3.9.3"
shapely = "2.0.6"
scipy = "1.14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^24.10.0"
pylint = "^3.3.4"
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:openpyxl.*"
]
testpaths = ["src/python"]
python_files = ["test.py"] 
