[tool.poetry]
name = "hole-skin-changer"
version = "0.1.0"
description = "Python scripts for Hole Skin Changer"
packages = [
    { include = "src/python/*.py" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14" 
geopandas = "^1.0.1"
matplotlib = "3.9.3"
pandas = "^2.2.3"
numpy = "^2.2.4"
scipy = "1.14.1"
shapely = "^2.0.7"
fiona = "^1.10.1"
pyproj = "^3.7.1"
rtree = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:openpyxl.*"
]
